chore: fix obnoxious layout shift + update logos and deps

--- a/resources/style.css
+++ b/resources/style.css
@@ -29,7 +29,7 @@
 	--pref-font-size: 3vw;
 	--max-font-size: 1.3rem;
 
-	--line-max-length: 55ch;
+	--line-max-length: 35rem;
 
 	--nav-height: 6.5ex;
 
